Properly support QT_DEVICE_PIXEL_RATIO

This fixes the region grabber when running spectacle with QT_DEVICE_PIXEL_RATIO>1.
It fixes rendering the grabbed image, selecting it, the help overlays as well as the
preview of the high dpi pixmap.

REVIEW: 126479
BUG: 357022
FIXED-IN: 15.12.1