src/Gui/KSImageWidget.cpp
@@ -38,7 +38,7 @@ void KSImageWidget::setScreenshot(const QPixmap &pixmap)
 {
     mPixmap = pixmap;
     setToolTip(i18n("Image Size: %1x%2 pixels", mPixmap.width(), mPixmap.height()));
-    setPixmap(mPixmap.scaled(size(), Qt::KeepAspectRatio, Qt::SmoothTransformation));
+    setPixmap(mPixmap.scaled(size() * pixmap.devicePixelRatio(), Qt::KeepAspectRatio, Qt::SmoothTransformation));
 }
 
 // drag handlers
